[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Environment/brocoli.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Brocolli.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 28.1145

[sub_resource type="Animation" id=2]
resource_name = "bounce"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, -30 ) ]
}

[node name="Brocolli" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 22.7191, 14.0324 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 20.7144, 19.7121 )
scale = Vector2( 2.29465, 2.23201 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Brocolli_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
